apps/base/selfhosted/libreddit/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: libreddit-ingress
  namespace: selfhosted
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: reddit.thekitty.zone
    external-dns.alpha.kubernetes.io/ttl: "600" #optional
spec:
  rules:
    - host: reddit.thekitty.zone
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: libreddit
                port:
                  number: 8080
  tls:
    - secretName: reddit-tls
      hosts:
        - reddit.thekitty.zone
